--- a/package.json
+++ b/package.json
@@ -18,8 +18,11 @@
     "react-icons": "^4.8.0",
     "react-loader-spinner": "^4.0.0",
     "react-player": "^2.12.0",
+    "react-redux": "^8.0.5",
     "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
+    "redux": "^4.2.1",
+    "redux-thunk": "^2.4.2",
     "semantic-ui-css": "^2.5.0",
     "semantic-ui-react": "^2.1.4",
     "uuid": "^9.0.0",
